--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
   },
   "dependencies": {
     "fs-extra": "^7.0.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "request": "^2.88.0",
+    "request-promise-core": "^1.1.2",
+    "request-promise-native": "^1.0.7"
   }
 }
